# rag-knowledge-assistant

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 27a31a8e5963_conversation_indexes_cascade_utc.py  a1b2c3d4e5f6_add_role_to_users.py  c76c2e9bf439_fix_created_at_timezone.py
backend/src/app/: dependencies.py  main.py
backend/src/app/controllers/: auth.py  conversation_controller.py  document_controller.py  evaluation_controller.py  query_controller.py
backend/src/app/core/: config.py  security.py
backend/src/app/db/: session.py
backend/src/app/models/: __init__.py  chunk.py  conversation.py  document.py  evaluation.py  ingestion_job.py  user.py
backend/src/app/routers/: auth.py  conversations.py  documents.py  evaluation.py  query.py
backend/src/app/schemas/: auth.py  conversation.py  document.py  evaluation.py  query.py
backend/src/app/services/config/: logging_config.py  rag_settings.py
backend/src/app/services/rag/: pipeline.py
backend/src/app/services/rag/evaluation/: evaluator.py  ground_truth_loader.py  metrics.py
backend/src/app/services/rag/generation/: history_summarizer.py  llm_client.py  prompt_templates.py
backend/src/app/services/rag/ingestion/: bm25_keyword_indexer.py  chunk_tagger.py  document_chunker.py  ingestion_runner.py  pdf_parser.py  qdrant_indexer.py  text_embedder.py
backend/src/app/services/rag/retrieval/: dense_retriever.py  hybrid_fuser.py  query_rewriter.py  reranker.py  sparse_retriever.py
backend/tests/: conftest.py  test_auth.py  test_conversations.py  test_documents.py  test_query.py  test_rag_units.py
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  vite.config.ts
frontend/src/: routeTree.gen.ts  styles.css
frontend/src/components/: AppSidebar.tsx  (+1 more)
(+16 files in other folders)
